Fix styling for admin_editor and improve dark mode

--- a/mockquizapp/static/css/admin_dashboard/styles.css
+++ b/mockquizapp/static/css/admin_dashboard/styles.css
@@ -300,7 +300,7 @@ body {
 
 .user-card:hover{ 
     background: color-mix(in srgb, var(--secondary) 80%, white 20%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px var(--text-hover);
 }
 
 .user-card h6{
